신규 검수 리스트 수정 2023/11/27

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -159,7 +159,7 @@
 							<!-- <div class="swiper-slide">
 								<img src="/resources/img/DA_banner_mobile_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
 							</div> -->
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<img src="/resources/img/banner-22_mobile.jpg" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
@@ -170,7 +170,7 @@
 							</div>
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-13_mobile.jpg" onclick="javascript:location.href='/mgz9/media';" style="cursor:pointer;"/>
-							</div>
+							</div> -->
 
 						</div>
 						<div class="swiper-pagination swpa-1"></div>
@@ -286,7 +286,7 @@
             <div class="contents max-1500 popular_member_wrap">				
 				<div class="tit_wrap">
                     <h2>인기 회원</h2>
-                    <a href="#"><button type="button" class="btn_more">더보기</button></a>
+                   <!--  <a href="#"><button type="button" class="btn_more">더보기</button></a> -->
                 </div>
 				<div class="cns-div swi-box mt10">
 					<div class="swiper mySwiper3">
