--- a/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
@@ -208,11 +208,11 @@
 			type: "post",
 			url: "/community/searchHomeList",
 			success: function(data) {
-				var popList = data.result.popList; // 이 주의 인기 작품자랑 리스트
-				var boastMstList = data.result.boastMstList; // 자랑하기 고수 리스트
-				var bestExhibitList = data.result.bestExhibitList; // 전시후기/소개 베스트 게시물 리스트
-				var bestIssueList = data.result.bestIssueList; // 이슈 베스트 게시물 리스트
-				var community_banner = data.result.bigBnn; // 커뮤니티 배너 리스트
+				var popList = data.popList.popList; // 이 주의 인기 작품자랑 리스트
+				var boastMstList = data.boastMstList.boastMstList; // 자랑하기 고수 리스트
+				var bestExhibitList = data.bestExhibitList.bestExhibitList; // 전시후기/소개 베스트 게시물 리스트
+				var bestIssueList = data.bestIssueList.bestIssueList; // 이슈 베스트 게시물 리스트
+				var community_banner = data.bigBnn; // 커뮤니티 배너 리스트
 
 				var bannerWrap = $("#community_banner"); // 배너
 				bannerWrap.append(fn_setBanner(community_banner)).trigger("create");
@@ -325,29 +325,29 @@
 	}
 	
 	//홈 배너
-	function fn_setBanner(list) {
+	function fn_setBanner(community_banner) {
 		
-		console.log(list)
+		console.log(community_banner)
 		
 		$(".community_visual_wrap").empty();
 		
 		var html = "";
 		//오른쪽 배너
 		html += '<div class="community_visual">';
-		html += '	<a href="'+list.bnnMLndUrl+'">';
-		html += '		<img src="'+list.bnnMmImgUrl+'" alt="">';
+		html += '	<a href="'+community_banner.bigBnn.bnnMLndUrl+'">';
+		html += '		<img src="'+community_banner.bigBnn.bnnMmImgUrl+'" alt="">';
 		html += '	</a>';
 		html += '</div>';
 		//왼쪽배너
 		html += '<div class="community_visual_event">';
         html += '	<ul>';
         html += '		<li>';
-        html += '			<a href="'+list.bnnELndUrl+'">';
-        html += '				<img src="'+list.bnnEmImgUrl+'" alt="">';
+        html += '			<a href="'+community_banner.bigBnn.bnnELndUrl+'">';
+        html += '				<img src="'+community_banner.bigBnn.bnnEmImgUrl+'" alt="">';
         html += '			</a>';
         html += '		</li>';
         html += '       <li>';
-        html += '			<a href="'+list.bnnELndUrl+'">';
+        html += '			<a href="'+community_banner.bigBnn.bnnELndUrl+'">';
         html += '				<img src="/resources/img/img_new/btn_event_more.png" alt="">';
         html += '			</a>';
         html += '		</li>';
