--- a/src/main/resources/templates/thymeleaf/fo/community/community_works_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works_mo.html
@@ -207,7 +207,7 @@
 
    	// 커뮤니티 작품 데이터 화면에 뿌려주기
    	function communityWorksList(){
-   		if(totalCount != listLength){
+   		/* if(totalCount != listLength){ */
    			var param = {
    	   				comtTypCd: 'BOA',
    	   				offset: 0,
@@ -234,14 +234,16 @@
    	   		});
 
    	   		offset += 12;
-   		}else{
+   		}
+   		/* else{
      		modalAlertShow("검색 결과가 없습니다."); 
      		//$(".workspic_wrap .workspic_row").remove();
-     	}
-   	}
+     	} */
+   	
    	
    	function workHtml(list){
    		var strHtml = '';
+   		if(list.length > 0){
    		console.log("list"+list);
    		list.forEach(function(work, idx){
    			var cnt = idx + 1;
@@ -289,7 +291,12 @@
    		
    		$(".workspic_wrap .workspic_row").remove();
    		$(".workspic_wrap").prepend(strHtml);
-   	}
+   	}else{
+ 		modalAlertShow("검색 결과가 없습니다."); 
+ 		//$(".workspic_wrap .workspic_row").remove();
+ 	}
+   		
+   }
    	
  // 좋아요 체크 여부 조회
 	function likeCheckYn(sqNumber) {
