--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
@@ -137,8 +137,8 @@
             </div>
             <div class="notice dp-flex">
                 <div class="tit">공 지</div>
-                <div class="contents mt0">
-                	<div>작품자랑 작성 가이드 라인 ver 1.0</div>
+                <div class="contents mt0" id="noti">
+                	<span><!-- 작품자랑 작성 가이드 라인 ver 1.0 --></span>
                 </div>
             </div>
             <div class="exhint_wrap" id="listBox">
@@ -226,6 +226,7 @@
    			success: (function(response){
    				setExhibitHtml(response.result);
    				setPagenation(response.totalCount);
+   				fn_notice(response.noti);
    			}),
    			error: (function(response){
    				console.log(response);
@@ -552,7 +553,21 @@
  		$("#paginate").append(strHtml);
  		
  	}
-
+	
+ // 공지 조회
+	function fn_notice(data){
+		if(data != null){
+			console.log(data.notiHref);
+		
+			$("#noti span").text(data.noti);
+			
+			$("#noti span").on("click", function () {
+	          
+	            window.open(data.notiHref, "_blank");
+	        }).css("cursor", "pointer");
+		}
+	}
+ 	
     </script>
 </body>
 </html>
