--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
@@ -104,7 +104,7 @@
             	<div id ="left_menu">
 	                <div class="contents_left">
 	                  <div class="myinfo_wrap">
-	                    <div class="myinfo_pic"><img src="/resources/img/img_new/myinfo_da_pic.png" alt=""></div>
+	                    <!-- <div class="myinfo_pic"><img src="/resources/img/img_new/myinfo_da_pic.png" alt=""></div> -->
 	                    <div class="myinfo_con">
 	                      <ul>
 	                        <li class="name">Dealing - Art <span></span></li>
@@ -160,7 +160,7 @@
                         <a href="/myPage/myWorkListMobile"><button class="btn_more">더보기</button></a>
                     </div>
                     <ul id="myWorks">
-                        <li>
+                       <!--  <li>
                           <a href="#"><img src="/resources/img/img_new/sample_works01.jpg" alt=""></a>
                         </li>
                         <li>
@@ -168,7 +168,7 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 0</span><img src="/resources/img/img_new/sample_works03.jpg" alt=""></a>
-                        </li>     
+                        </li> -->     
                       </ul>
                   </div>
                   <div class="mypage_showingoff_wrap">
@@ -177,7 +177,7 @@
                          <a href="/myPage/show_off"><button class="btn_more">더보기</button></a>
                     </div>
                     <ul id="myBoast">
-                        <li>
+                        <!-- <li>
                           <a href="#"><img src="/resources/img/img_new/sample_works05.jpg" alt=""></a>
                         </li>
                         <li>
@@ -185,7 +185,7 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 0</span><img src="/resources/img/img_new/sample_works07.jpg" alt=""></a>
-                        </li>                        
+                        </li> -->                        
                       </ul>
                   </div>
                   <div class="mypage_posts_warp">
@@ -195,10 +195,10 @@
                            <a href="/myPage/exhintMobile"><button class="btn_more">더보기</button></a>
                         </div>
                         <ol id="myExhbn">
-                            <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
+                            <!-- <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
                             <li><a href="#">희망을 주는 그림</a><em></em></li>
                             <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
-                            <li><a href="#">희망을 주는 그림</a><em></em></li>
+                            <li><a href="#">희망을 주는 그림</a><em></em></li> -->
                         </ol>
                     </div>                    
                   </div>
@@ -209,10 +209,10 @@
                             <a href="/myPage/issue"><button class="btn_more">더보기</button></a>
                         </div>
                         <ol id="myIssue">
-                            <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
+                            <!-- <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
                             <li><a href="#">도자기 보관 방법</a><em></em></li>
                             <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
-                            <li><a href="#">도자기 보관 방법</a><em></em></li>
+                            <li><a href="#">도자기 보관 방법</a><em></em></li> -->
                         </ol>
                     </div>                    
                   </div>
@@ -222,7 +222,7 @@
                         <a href="/myPage/scrap"><button class="btn_more">더보기</button></a>
                     </div>
                     <ul id="myScrap">
-                        <li>
+                        <!-- <li>
                           <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                         </li>
                         <li>
@@ -230,7 +230,7 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 0</span><img src="/resources/img/img_new/sample_master03.jpg" alt=""></a>
-                        </li>                        
+                        </li>   -->                      
                       </ul>
                   </div>
                   <div class="mypage_following_wrap">
@@ -239,7 +239,7 @@
                         <a href="/myPage/following"><button class="btn_more">더보기</button></a>
                     </div>
                     <ul id="myFollowing">
-                        <li>
+                        <!-- <li>
                           <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                         </li>
                         <li>
@@ -247,7 +247,7 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 0</span><img src="/resources/img/img_new/sample_master03.jpg" alt=""></a>
-                        </li>                        
+                        </li>   -->                      
                       </ul>
                   </div>
                   <div class="myNoti_wrap">
@@ -257,9 +257,9 @@
                              <a href="/myPage/notis"><button class="btn_more">더보기</button></a>
                         </div>
                         <ol id="myNoti">
-                            <li><a href="#">[판매제안] 작품이 너무 맘에 듭니다. 판매로 올려주세요 ♥</a></li>
+                           <!--  <li><a href="#">[판매제안] 작품이 너무 맘에 듭니다. 판매로 올려주세요 ♥</a></li>
                             <li><a href="#">[가격제안] 10% 낮춰서 1,000,000원에 구매 희망합니다!</a></li>
-                            <li><a href="#">[상세사진요청]후면 사진 요청 드려요.</a></li>
+                            <li><a href="#">[상세사진요청]후면 사진 요청 드려요.</a></li> -->
                         </ol>
                     </div>                    
                   </div>
