--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
@@ -207,18 +207,18 @@
                     </div>  
                     <div class="mypage_exhint_contents_wrap">
                         <div class="exhint_row">
-                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><!-- <img src="/resources/img/img_new/sample_exhint01.jpg" alt=""> --><!-- <div class="ico_num">1+</div> --></div>
                             <div class="contents">
                                 <ul>
-                                    <li>
+                                   <!--  <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
                                     <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
-                                    <li>
-                                        <div class="user_wrap">
+                                    <li> -->
+                                       <!--  <div class="user_wrap">
                                             <div class="user">
                                                 <ul>
                                                     <li class="pt5"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>
@@ -233,15 +233,15 @@
                                                     <li><p class="ico_comments"></p><span>99</span></li>
                                                 </ul>
                                             </div>
-                                        </div>                                
-                                    </li>
+                                        </div>                                 
+                                    </li>-->
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="pagination">
                     	<div class="paginate">                        
-                        	<strong>1</strong>
+                        	<!-- <strong>1</strong>
                             <a href="#">2</a>
                             <a href="#">3</a>
                             <a href="#">4</a>
@@ -250,7 +250,7 @@
                             <a href="#">7</a>
                             <a href="#">8</a>
                             <a href="#" class="next ml10"></a>
-                            <a href="#" class="next_end ml5"></a>
+                            <a href="#" class="next_end ml5"></a> -->
                      	</div>
                 	</div>    
              	</div>
