--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -277,7 +277,7 @@
    	            strHtml += '        		<div class="pic">';
    	            
    	         	if(isNew){
-    	        strHtml += '        		<div class="ico_new">NEW ' + work.regDt + ' </div>';
+    	        strHtml += '        		<div class="ico_new">NEW</div>';
     	        }
    	         	
    	            strHtml += '					<a href="/community/showingOffDetail?SqNumber='+ work.comtSq +'"><img src="'+ work.comtImgUrl +'" alt="" class="img-fit-contain"></a></div>';
