--- a/src/main/resources/templates/thymeleaf/fo/community/community_works_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works_mo.html
@@ -248,6 +248,9 @@
    		console.log("list"+list);
    		list.forEach(function(work, idx){
    			var cnt = idx + 1;
+   			
+   			var isNew = isNewPost(work.regDt);
+   			
 			var rowYn = 'Y';
    			//if(cnt == 1 || cnt % 5 == 0) {
    			if(cnt == 1 || rowYn == 'Y') {
@@ -270,7 +273,12 @@
             strHtml += '                		<li>'+ (work.mbrIntro || "소개가 없습니다.") +'</li>';
             strHtml += '            		</ul>';
             strHtml += '        		</div>';
-            strHtml += '        		<div class="pic"><div class="ico_new">NEW</div><a href="/community/showingOffDetail?SqNumber='+ work.comtSq +'"><img src="'+ work.comtImgUrl +'" alt="" class="img-fit-contain"></a></div>';
+            
+            if(isNew){
+    	        strHtml += '        		<div class="ico_new">NEW</div>';
+    	        }
+             
+            strHtml += '        		 <a href="/community/showingOffDetail?SqNumber='+ work.comtSq +'"><img src="'+ work.comtImgUrl +'" alt="" class="img-fit-contain"></a></div>';
             strHtml += '        		<div class="icon_box">';
             strHtml += '           			<ul>';
             strHtml += '                		<li><p class="ico_good" onclick="likeCheckYn(' + work.comtSq + ');" style="cursor: pointer;"></p><span>'+ work.comtLikes +'</span></li>';
@@ -299,6 +307,32 @@
    		
    }
    	
+   function isNewPost(regDt) {
+  	    try {
+  	        var postDate;
+
+  	        // regDt가 배열인 경우
+  	        if (Array.isArray(regDt)) {
+  	            postDate = new Date(regDt[0], regDt[1] - 1, regDt[2], regDt[3], regDt[4], regDt[5]);
+  	        } else {
+  	            // regDt가 다른 형식인 경우
+  	            postDate = new Date(regDt);
+  	        }
+
+  	        var currentTime = new Date(); 
+  	        var timeDifference = currentTime - postDate;
+
+  	        var minutesDifference = timeDifference / (1000 * 60 * 60);
+
+
+  	        return minutesDifference <= 12;  
+  	    } catch (error) {
+  	        console.error("날짜 파싱 오류:", error);
+  	        return false; // 또는 애플리케이션에 맞게 오류를 처리합니다.
+  	    }
+  	}
+   		
+   		
  // 좋아요 체크 여부 조회
 	function likeCheckYn(sqNumber) {
 		$.ajax({
